--- a/pub.idba.ORA_EBS_Login_URL_chk_Selenium.ipynb
+++ b/pub.idba.ORA_EBS_Login_URL_chk_Selenium.ipynb
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "# Enter \n",
-    "u_name_ora_sysadmin ='testsso'\n",
+    "u_name_ora_sysadmin ='testuser'\n",
     "print('Enter password for test Oracle EBS SSO URL:')\n",
     "u_name_ora_sys_pass = getpass()\n"
    ]
