--- a/pub.idba.ORA_EBS_Login_URL_chk_Selenium.ipynb
+++ b/pub.idba.ORA_EBS_Login_URL_chk_Selenium.ipynb
@@ -180,9 +180,12 @@
     "\n",
     "    \n",
     "def add_Test_mark(image_name,title_text,text_up=None,url_text=None,ec=None):\n",
-    "    url_font = ImageFont.truetype(\"ani.ttf\", 70, encoding=\"unic\")\n",
-    "    title_font = ImageFont.truetype(\"ani.ttf\", 100, encoding=\"unic\")\n",
-    "    # font = ImageFont.truetype(os.environ['LOCALAPPDATA'] + \"/Microsoft/Windows/Fonts/Dance Floor.ttf\", 10)\n",
+    "    try:\n",
+    "        url_font = ImageFont.truetype(\"arial.ttf\", 70, encoding=\"unic\")\n",
+    "        title_font = ImageFont.truetype(\"arial.ttf\", 100, encoding=\"unic\")\n",
+    "    except:\n",
+    "        url_font = ImageFont.truetype(\"ani.ttf\", 70, encoding=\"unic\")\n",
+    "        title_font = ImageFont.truetype(\"ani.ttf\", 100, encoding=\"unic\")\n",
     "    my_image = Image.open(image_name)\n",
     "    image_editable = ImageDraw.Draw(my_image)\n",
     "    w=my_image.size[0]\n",
@@ -299,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Demo , Testing and Development\n",
+    "### Demo, Testing and Development\n",
     "display(html_print(f\"<table><tr><td><img src='ebs_snap_CRAUAT.png'></td><td><img src='ebs_snap_CRAPROD.png'></td>\\\n",
     "<td><img src='ebs_snap_CRADEV.png'></td> <td><img src='ebs_snap_CRA_PUB.png'></td>   </tr></table>\"))\n"
    ]
