--- a/pub.idba.ORA_EBS_Login_URL_chk_Selenium.ipynb
+++ b/pub.idba.ORA_EBS_Login_URL_chk_Selenium.ipynb
@@ -37,9 +37,9 @@
     "# This Jupyter Notepad for QA testing Oracle EBS login pages R12.2.5+\n",
     "\n",
     "test_plan = [ \n",
-    "     {\"url\":\"https://ebstimeandexpenseuat.crai.com\",\"env_name\":\"CRAUAT\", \"u_name\":\"testuser\"} \n",
-    "    ,{\"url\":\"https://ebstimeandexpensedev.crai.com\",\"env_name\":\"CRADEV\", \"u_name\":\"testuser\"}\n",
-    "    ,{\"url\":\"https://www.crai.com\" ,\"env_name\":\"CRA_PUB\" }\n",
+    "     {\"url\":\"https://ebsuat.mysite.demo\",\"env_name\":\"UAT\", \"u_name\":\"testuser\"} \n",
+    "    ,{\"url\":\"https://ebsdev.mysite.demo\",\"env_name\":\"DEV\", \"u_name\":\"testuser\"}\n",
+    "    ,{\"url\":\"https://www.mysite.demo\" ,\"env_name\":\"PUB\" }\n",
     "]\n"
    ]
   },
